corrections mobile et desktop, début version tablette

--- a/style.css
+++ b/style.css
@@ -374,9 +374,8 @@ i.fa-info
 		{
 			display: flex;
 			flex-direction: row;
-			height: 140px;
-			max-width: 350px;
-			min-width: 320px;
+			height: 145px;
+			width: 345px;
 			margin-left: auto;
 			margin-right: auto;
 		}
@@ -412,17 +411,19 @@ i.fa-info
 	display: flex;
 	flex-direction: row;
 	justify-content: space-between;
+	flex-wrap: wrap;
 }
 
 	#acti h1
 	{
-		margin: 50px 0 7px 0;
+		margin: 50px 0 -30px 0;
 	}
 
 	#activités div
 	{
-		width: 22.7%;
+		width: 300px;
 		height: 445px;
+		margin-top: 40px;
 	}
 
 		#acti figure
@@ -678,6 +679,9 @@ footer
 	div#pop
 		{
 			width: auto;
+			max-width: 420px;
+			margin-left: auto;
+			margin-right: auto;
 			border-radius: 0;
 			padding-bottom: 15px;
 			padding-left: 20px;
@@ -690,10 +694,9 @@ footer
 			}
 
 
-			figure.populaires
+			#pop figure
 			{
-				margin-right: 20px;
-				margin-left: 20px;
+				width: 323px;
 			}
 
 	#heberg #heb
@@ -738,6 +741,7 @@ footer
 				{
 					width: auto;
 					height: auto;
+					margin-top: 0;
 				}
 
 				#acti h1
@@ -802,7 +806,7 @@ footer
 
 /*XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX  VERSION TABLETTES    XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX*/
 
-@media all and (min-width: 768px) and (max-width: 991px)
+@media all and (min-width: 768px) and (max-width: 1024px)
 
 {
 	h1
@@ -810,9 +814,37 @@ footer
 		color: red;
 	}
 
-
-/* xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx    xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx*/
+/* xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx disposition blocs partie hébergements   xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx*/
 	
+	#heberg
+	{
+		flex-direction: column-reverse;
+		align-items: center;
+	}
+
+	#pop
+	{
+		margin-bottom: 40px;
+	}
+
+	#hotelspop
+	{
+		display: flex;
+		flex-wrap: wrap;
+	}
+
+	#pop figure
+	{
+		width: 323px;
+	}
+
+	#heb
+	{
+		flex-wrap: wrap;
+		width: 100%;
+	}
+
+
 }
 
 
